--- a/mapquest_inc/fontset-settings.xml.inc.template
+++ b/mapquest_inc/fontset-settings.xml.inc.template
@@ -3,7 +3,7 @@ Comment out the unifont entries if you haven't that font installed
 in your mapnik fonts dir, and don't want to use it as a fallback font.
 Mapnik includes this font by default since r1328.
 To see the fonts you have installed with Mapnik do:
-ls `python -c "import mapnik;print mapnik.fontscollectionpath"`-->
+ls `python -c "import mapnik2;print mapnik2.fontscollectionpath"`-->
 
 <FontSet name="book-fonts">
   <Font face-name="Arial Regular"/>
